--- a/language/et.po
+++ b/language/et.po
@@ -4,8 +4,8 @@
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
 # Translators:
-# Moon Ika, 2020
-# Rivo Zängov <eraser@eraser.ee>, 2020
+# Rivo Zängov <eraser@eraser.ee>, 2021
+# Moon Ika, 2022
 # 
 #, fuzzy
 msgid ""
@@ -14,7 +14,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-08-08 11:15-0400\n"
 "PO-Revision-Date: 2017-09-14 20:14+0000\n"
-"Last-Translator: Rivo Zängov <eraser@eraser.ee>, 2020\n"
+"Last-Translator: Moon Ika, 2022\n"
 "Language-Team: Estonian (https://www.transifex.com/omeka/teams/14184/et/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -42,15 +42,15 @@ msgstr ""
 
 #: view/common/options-sidebar.phtml:11
 msgid "Use multivalue separator"
-msgstr ""
+msgstr "Kasuta mitme väärtuse eraldamist"
 
 #: view/common/options-sidebar.phtml:21
 msgid "This will override language settings in basic import settings."
-msgstr ""
+msgstr "See kirjutab üle importimise põhiseadete keele seaded."
 
 #: view/common/options-sidebar.phtml:40
 msgid "Import values as private"
-msgstr ""
+msgstr "Impordi väärtused privaatsena"
 
 #: view/csv-import/index/index.phtml:8
 msgid "Import Settings"
@@ -63,7 +63,7 @@ msgstr "CSV import"
 
 #: view/csv-import/index/map.phtml:13
 msgid "mixed resources"
-msgstr ""
+msgstr "segatud ressursid"
 
 #: view/csv-import/index/map.phtml:14
 msgid "users"
@@ -164,6 +164,7 @@ msgstr "Töö üksikasjad"
 msgid ""
 "Problems were detected with the import. Check the job's log for details."
 msgstr ""
+"Importimisel tuvastati probleem. Detailsema info saamiseks vaata töö logi."
 
 #: view/csv-import/index/past-imports.phtml:78
 #, php-format
@@ -176,7 +177,7 @@ msgstr "Tühistamine on käimas"
 
 #: view/csv-import/mapping-sidebar/item-set.phtml:3
 msgid "Item set-specific data"
-msgstr ""
+msgstr "Ühiku komplektipõhised andmed"
 
 #: view/csv-import/mapping-sidebar/item.phtml:3
 msgid "Item-specific data"
@@ -198,7 +199,7 @@ msgstr "Meedia allikas"
 
 #: view/csv-import/mapping-sidebar/media.phtml:3
 msgid "Media-specific data"
-msgstr ""
+msgstr "Meediaspetsiifilised andmed"
 
 #: view/csv-import/mapping-sidebar/media.phtml:7
 msgid "Item (by selected property)"
@@ -221,7 +222,7 @@ msgstr "Ressursi mall (sildi järgi)"
 
 #: view/csv-import/mapping-sidebar/resource.phtml:10
 msgid "Resource class (by term)"
-msgstr ""
+msgstr "Ressursi klass (termini järgi)"
 
 #: view/csv-import/mapping-sidebar/resource.phtml:12
 msgid "Owner (by email address)"
@@ -296,7 +297,7 @@ msgstr ""
 
 #: src/Form/ImportForm.php:93
 msgid "CSV column enclosure"
-msgstr ""
+msgstr "CSV veeru tekstitäpsusti"
 
 #: src/Form/ImportForm.php:94
 msgid ""
@@ -315,11 +316,11 @@ msgstr "Mis liiki andmeid imporditakse"
 
 #: src/Form/ImportForm.php:112
 msgid "Mixed resources"
-msgstr ""
+msgstr "Segatud ressursid"
 
 #: src/Form/ImportForm.php:126
 msgid "Automap with simple labels"
-msgstr ""
+msgstr "Seosta automaatselt lihtsiltidega"
 
 #: src/Form/ImportForm.php:127
 msgid ""
@@ -360,7 +361,7 @@ msgstr ""
 
 #: src/Form/MappingForm.php:172
 msgid "Open/closed to additions"
-msgstr ""
+msgstr "Muutmiseks avatud/suletud"
 
 #: src/Form/MappingForm.php:173 src/Form/MappingForm.php:208
 msgid ""
@@ -400,19 +401,19 @@ msgstr "Loo uus ressurss"
 
 #: src/Form/MappingForm.php:281
 msgid "Append data to the resource"
-msgstr ""
+msgstr "Lisa andmed ressursile"
 
 #: src/Form/MappingForm.php:282
 msgid "Revise data of the resource"
-msgstr ""
+msgstr "Vaata ressursi andmed üle"
 
 #: src/Form/MappingForm.php:283
 msgid "Update data of the resource"
-msgstr ""
+msgstr "Uuenda ressursi andmeid"
 
 #: src/Form/MappingForm.php:284
 msgid "Replace all data of the resource"
-msgstr ""
+msgstr "Asenda ressursi andmed"
 
 #: src/Form/MappingForm.php:285
 msgid "Delete the resource"
@@ -427,11 +428,11 @@ msgstr ""
 
 #: src/Form/MappingForm.php:307
 msgid "Resource identifier column"
-msgstr ""
+msgstr "Ressursi identifikaatori veerg"
 
 #: src/Form/MappingForm.php:326
 msgid "Resource identifier property"
-msgstr ""
+msgstr "Ressursi identifikaatori omadus"
 
 #: src/Form/MappingForm.php:327
 msgid ""
@@ -443,7 +444,7 @@ msgstr ""
 
 #: src/Form/MappingForm.php:348
 msgid "Action on unidentified resources"
-msgstr ""
+msgstr "Toiming tuvastamataressursside korral"
 
 #: src/Form/MappingForm.php:349
 msgid ""
@@ -552,7 +553,7 @@ msgstr ""
 
 #: src/Job/Import.php:495
 msgid "unknown ingester"
-msgstr ""
+msgstr "tundmatu täisarv"
 
 #: src/Job/Import.php:620
 msgid "A resource type is required to import a resource."
@@ -560,7 +561,7 @@ msgstr ""
 
 #: src/Job/Import.php:1045
 msgid "Resource type is empty."
-msgstr ""
+msgstr "Ressursi liik on tühi."
 
 #: src/Job/Import.php:1050
 #, php-format
@@ -597,7 +598,7 @@ msgstr "Failil pole päiseid."
 #: src/Controller/IndexController.php:156
 #, php-format
 msgid "Importing in background (%sjob #%d%s)"
-msgstr ""
+msgstr "Taustal importimine (%stöö nr.%d%s)"
 
 #: src/Controller/IndexController.php:169
 msgid "Invalid settings."
@@ -614,7 +615,7 @@ msgstr "Fail ei ole UTF-8 kodeeringus."
 
 #: src/Source/AbstractSource.php:74
 msgid "The source is undefined."
-msgstr ""
+msgstr "Allikas on määratamata."
 
 #: src/Source/AbstractSource.php:79
 msgid "The source is empty."
@@ -642,7 +643,7 @@ msgstr "Ressursi andmed"
 #: src/Mapping/ResourceMapping.php:64
 #, php-format
 msgid "\"%s\" is not a valid resource type."
-msgstr ""
+msgstr "\"%s\" pole korrektne ressursi liik."
 
 #: src/Mapping/UserMapping.php:8
 msgid "User info"
@@ -674,13 +675,13 @@ msgstr ""
 #: src/Mapping/AbstractResourceMapping.php:275
 #, php-format
 msgid "\"%s\" (%s) is not a valid resource identifier."
-msgstr ""
+msgstr "\"%s\" (%s) pole korrektne ressursi identifikaator."
 
 #: src/Mapping/AbstractResourceMapping.php:289
 #: src/Mapping/AbstractResourceMapping.php:296
 #, php-format
 msgid "\"%s\" is not a valid Resource Template name."
-msgstr ""
+msgstr "\"%s\" pole korrektne ressursi malli nimi."
 
 #: src/Mapping/AbstractResourceMapping.php:309
 #: src/Mapping/AbstractResourceMapping.php:318
@@ -694,7 +695,7 @@ msgstr ""
 #: src/Mapping/AbstractResourceMapping.php:339
 #, php-format
 msgid "\"%s\" is not a valid user email address."
-msgstr ""
+msgstr "\"%s\" pole korrektne e-posti aadress."
 
 #: src/Mapping/ItemMapping.php:8
 msgid "Item data"
@@ -702,4 +703,4 @@ msgstr "Ühiku andmed"
 
 #: config/module.config.php:178
 msgid "Omeka resource (by ID)"
-msgstr ""
+msgstr "Omeka ressurss (ID järgi)"
